# matplotlib-cpp

./: CMakeLists.txt  README.md
examples/: basic.cpp  quiver.cpp  subplot2grid.cpp
include/matplotlibcpp/: matplotlibcpp.h
